Adjusted depth of sections and added documents of App in the pdf.

--- a/Kapitel/02_App/01_View/DocumentScreen/main.tex
+++ b/Kapitel/02_App/01_View/DocumentScreen/main.tex
@@ -1,6 +1,4 @@
-\chapter{Dokumentananzeige}
-
-\section{DocumentScreen}
+\subsection{DocumentScreen}
 \paragraph*{Beschreibung}
 Klasse zum Anzeigen eines längeren Textes in einfachem Format, 
 dass mindestens Überschriften und Links unterstützt.
