--- a/Kapitel/02_App/01_View/SearchInput/main.tex
+++ b/Kapitel/02_App/01_View/SearchInput/main.tex
@@ -1,11 +1,11 @@
-\section{SearchInput}
+\subsection{SearchInput}
 \paragraph*{Beschreibung}
 Diese Klasse ermöglicht die Eingabe eines Suchbegriffs in ein Textfeld durch den Benutzer, 
 die Anzeige einer Liste von Suchvorschlägen und die Auswahl eines Vorschlages durch den Benutzer, 
 indem er einen Vorschlag auswählt oder die Eingabe vollständig selbst vornimmt.
 Die Klasse gehört zu View.
 
-\subsection{\texttt{+ getSearchInput() : String}}%$$$M
+\subsubsection{\texttt{+ getSearchInput() : String}}%$$$M
 \paragraph*{Kurzbeschreibung}
 Diese Methode ermöglicht Benutzereingaben und gibt einen gültigen Suchbegriff oder Null zurück.
 \paragraph*{Beschreibung}
@@ -18,14 +18,14 @@ Zeigt eine Liste von Vorschlägen (die Suchbegriffe), falls vorhanden, und erlau
 \paragraph*{Rückgabewert}
 String, Suchbegriff, den der Benutzer eingegeben hat
 \paragraph*{Notizen zur Implementierung}
-Benutzt eine Instanz von SearchView (https://developer.android.com/guide/topics/search/search-dialog#SearchableActivity).
+Benutzt eine Instanz von SearchView (\href{https://developer.android.com/guide/topics/search/search-dialog#SearchableActivity}).
 Für das Durchsuchen der Daten wird getSuggestions von Search genutzt.
 Die Suchvorschläge werden einem Curser übergeben.
 Dieser wird von einem CurserAdapter adaptiert und die Vorschläge werden so an die Instanz von SearchView gegeben.
 Dort werden die Vorschläge dann dem Benutzer angezeigt.
 
 
-\section{Bibliothek SearchView}
+\subsection{Bibliothek SearchView}
 \paragraph*{Beschreibung}
 Ein bereits existierendes Widget, das dem Benutzer eine Benutzeroberfläche bietet, um eine Suchanfrage einzugeben und eine Anfrage an einen Suchanbieter zu senden. 
 Zeigt eine Liste von Suchvorschlägen oder -ergebnissen an, falls verfügbar 
