--- a/Kapitel/02_App/03_Model/SearchModel/main.tex
+++ b/Kapitel/02_App/03_Model/SearchModel/main.tex
@@ -1,10 +1,10 @@
-\section{SearchModel}
+\subsection{SearchModel}
 \paragraph*{Beschreibung}
 Diese Klasse ermöglicht das Durchsuchen der Datenbank nach gültigen Suchbegriffen zu der gegebenen Query 
 und ermöglicht die Bestimmung des Kartenobjekts zu einem gültigen Suchbegriff, 
 dies kann eine Gebäudenummer, Gebäudenummer und Raumnummer, Gebäudenummer und Alias eines Raumes, ein Alias eines Gebäudes oder eine Person sein.
 
-\subsection{\texttt{+ getSuggestions(query : Query) : List<String>}}%$$$M
+\subsubsection{\texttt{+ getSuggestions(query : Query) : List<String>}}%$$$M
 \paragraph*{Kurzbeschreibung}
 Diese Methode gibt Suchvorschläge zu der übergebenen Query zurück.
 \paragraph*{Beschreibung}
@@ -20,7 +20,7 @@ List<String>, Suchvorschläge, die die Datenbank zurückgegeben hat
 \paragraph*{Notizen zur Implementierung}
 Wenn SQL genutzt wird, wird die Suche direkt auf SQL ausgeführt z.B. mit "like".
 
-\subsection{\texttt{+ getSearchable(searchKey : String) : MapObject}}%$$$M
+\subsubsection{\texttt{+ getSearchable(searchKey : String) : MapObject}}%$$$M
 \paragraph*{Kurzbeschreibung}
 Diese Methode gibt das zum Suchbegriffe gehörenden Kartenobjekt zurück.
 \paragraph*{Beschreibung}
@@ -32,7 +32,7 @@ Diese Klasse ermittelt das zu den Suchbegriffen gehörenden Kartenobjekt in der 
 \paragraph*{Rückgabewert}
 MapObject, Kartenobjekt zum Suchbegriff
 
-\subsection{\texttt{+ storeSearchKey(searchKey : String)}}%$$$M
+\subsubsection{\texttt{+ storeSearchKey(searchKey : String)}}%$$$M
 \paragraph*{Kurzbeschreibung}
 Diese Methode speichert den gegebenen Suchbegriff.
 \paragraph*{Beschreibung}
@@ -44,7 +44,7 @@ Diese Methode speichert den gegebenen Suchbegriff in der Datenbank als zuletzt g
 \paragraph*{Rückgabewert}
 keinen
 
-\subsection{\texttt{+ getLastSearchKeys() : List<String>}}%$$$M
+\subsubsection{\texttt{+ getLastSearchKeys() : List<String>}}%$$$M
 \paragraph*{Kurzbeschreibung}
 Diese Methode gibt die zuletzt gesuchten Suchbegriffe zurück.
 \paragraph*{Beschreibung}
