Specified session-only changes

--- a/Kapitel/04_Admin_Panel/02_Aufbau/06_Änderungen/main.tex
+++ b/Kapitel/04_Admin_Panel/02_Aufbau/06_Änderungen/main.tex
@@ -1,6 +1,7 @@
 \subsection{Änderungen}
 
 Die Aktionen-Seite zeigt alle Änderungen an offiziellen Aliassen, Alias-Vorschlägen und der Blacklist an und ermöglicht das Akzeptieren oder Revidieren der Änderungen.
+Dabei sind diese Änderungen aus der aktuellen Sitzung des angemeldeten Administrators durch den Administrator vorgenommen worden.
 
 \paragraph*{Layout}
 Die Offizielle-Alias-Seite benutzt das Admin-Layout.
