--- a/Kapitel/04_Admin_Panel/03_Aktionen/00_Beschreibung/main.tex
+++ b/Kapitel/04_Admin_Panel/03_Aktionen/00_Beschreibung/main.tex
@@ -9,4 +9,5 @@ Aktionen existieren in den folgenden Seiten:
 
 Das Resultat einer Aktion ist eine Instanz von \verb#Change#, die anschließend auf der Änderungsseite dargestellt wird.
 Diese Änderungen können dann anschließend akzeptiert oder revidiert werden.
+Diese Änderungen sind in der aktuellen Sitzung des angemeldeten Administrators vorgenommen worden.
 Aktionen die auf der Änderungsseite ausgelöst werden weichen von anderen Aktionen in ihrer Wirkungsweise ab.
