Add javadoc for method 'getUpdates_int_ListStringInt,ListStringInt,int'
Add javadoc for method
'Kapitel/00_Backend/QueryResolver/AliasQuery/
getUpdates_int_ListStringInt,ListStringInt,int'
in '\main.tex' (in the same above mentioned path).

--- a/Kapitel/00_Backend/Resolvers/QueryResolver/AliasQuery/main.tex
+++ b/Kapitel/00_Backend/Resolvers/QueryResolver/AliasQuery/main.tex
@@ -2,3 +2,4 @@
 
 \inprelmod{getAlias_int_ListAlias}
 \inprelmod{getAlias_int,UserID_ListAlias}
+\inprelmod{getUpdates_int_ListStringInt,ListStringInt,int}
