--- a/Kapitel/00_Backend/Resolvers/QueryResolver/AliasSuggestionQuery/main.tex
+++ b/Kapitel/00_Backend/Resolvers/QueryResolver/AliasSuggestionQuery/main.tex
@@ -1,3 +1,3 @@
 \subsection{AliasSuggestionQuery}
 
-\inprelmod{getAliasSuggestions_int,int_ListAliasSuggestion}
+\inprelmod{getAliasSuggestions_int,int_ListStringIntIntInt}
