--- a/Kapitel/04_Admin_Panel/03_Aktionen/03_Blacklist/01_Löschen/main.tex
+++ b/Kapitel/04_Admin_Panel/03_Aktionen/03_Blacklist/01_Löschen/main.tex
@@ -15,7 +15,7 @@ Blacklisteintrag wird nicht mehr angezeigt. Der Blacklisteintrag ist zur Löschu
 \paragraph*{Durchführung}
 \begin{enumerate}
     \item Das Interface \verb#Change# wird durch implementierung der Methode \verb#Change::perform# instanziiert. \\
-          Dabei ruft die Methode \verb#Change::perform# dieser Instanz die Methode \verb#Backend::deleteBlacklist# mit folgenden Parametern auf \begin{enumerate}
+          Dabei ruft die Methode \verb#Change::perform# dieser Instanz die Methode \verb#Backend::deleteBlacklistEntry# mit folgenden Parametern auf \begin{enumerate}
               \item entry: Der zu löschende Blacklisteintrag
           \end{enumerate}
     \item Die erzeugte Instanz wird den Changes durch die Methode \verb#Changes::addChange# mit folgenden Parametern übergeben: \begin{enumerate}
