Corrected spelling mistakes.

--- a/Kapitel/02_App/01_View/SearchInput/main.tex
+++ b/Kapitel/02_App/01_View/SearchInput/main.tex
@@ -20,8 +20,8 @@ String, Suchbegriff, den der Benutzer eingegeben hat
 \paragraph*{Notizen zur Implementierung}
 Benutzt eine Instanz von SearchView (\href{https://developer.android.com/guide/topics/search/search-dialog#SearchableActivity}).
 Für das Durchsuchen der Daten wird getSuggestions von Search genutzt.
-Die Suchvorschläge werden einem Curser übergeben.
-Dieser wird von einem CurserAdapter adaptiert und die Vorschläge werden so an die Instanz von SearchView gegeben.
+Die Suchvorschläge werden einem Cursor übergeben.
+Dieser wird von einem CursorAdapter adaptiert und die Vorschläge werden so an die Instanz von SearchView gegeben.
 Dort werden die Vorschläge dann dem Benutzer angezeigt.
 
 
