--- a/Kapitel/02_App/02_ViewModel/SearchController/main.tex
+++ b/Kapitel/02_App/02_ViewModel/SearchController/main.tex
@@ -19,7 +19,7 @@ List<String>, Suchvorschläge zur Query, die SearchModel zurückgegeben hat
 
 \subsubsection{\texttt{+ getSearchable(searchKey : String) : MapObject}}%$$$M
 \paragraph*{Kurzbeschreibung}
-Diese Methode gibt das zum Suchbegriffe gehörenden Kartenobjekt zurück.
+Diese Methode gibt das zum Suchbegriff gehörenden Kartenobjekt zurück.
 \paragraph*{Beschreibung}
 Diese Methode fordert das zu den Suchbegriffen gehörenden Kartenobjekt von dem SearchModel an und gibt dieses zurück.
 \paragraph*{Parameter}
