Enhance parameters of methods in 'Resolvers'

--- a/Kapitel/00_Backend/Resolvers/MutationResolver/AliasMutation/removeAlias_String,int_boolean/main.tex
+++ b/Kapitel/00_Backend/Resolvers/MutationResolver/AliasMutation/removeAlias_String,int_boolean/main.tex
@@ -3,6 +3,7 @@
 Entfernt einen globalen Alias aus der Datenbank.
 \paragraph*{Beschreibung}
 Die Methode ist ausschließlich von Administratoren aufzurufen.
+Gibt die Anweisung an die Schnittstelle \texttt{BlacklistService}, einen Alias aus der Datenbank der Aliasse zu entfernen.
 Die Methode ermöglicht, dass ein Administrator einen globalen Alias aus der Datenbank aus allen globalen Aliassen entfernen kann.
 Dies hat zur Folge, dass das entsprechende Kartenobjekt nicht mehr durch diesen, nun gelöschten Alias, gefunden werden kann.
 Hierfür wird der gewünschte globale Alias als Zeichenkette als auch die ID des dazugehörigen Kartenobjekts übergeben.
