--- a/Kapitel/00_Backend/Resolvers/MutationResolver/AliasMutation/removeFromBlacklist_String_boolean/main.tex
+++ b/Kapitel/00_Backend/Resolvers/MutationResolver/AliasMutation/removeFromBlacklist_String_boolean/main.tex
@@ -3,6 +3,7 @@
 Entfernt einen globalen Alias aus der Blacklist.
 \paragraph*{Beschreibung}
 Die Methode ist ausschließlich von Administratoren aufzurufen.
+Gibt die Anweisung an die Schnittstelle \texttt{BlacklistService}, eine Zeichenkette von der Blacklist zu entfernen.
 Die Methode ermöglicht, dass ein Administrator einen Alias als Zeichenkette, die aktuell in der Blacklist hinterlegt ist, aus der Blacklist entfernen kann.
 Dies hat zur Folge, dass die entsprechende Zeichenkette nun als Alias eines Kartenobjekts erfolgreich vorgeschlagen werden kann.
 Hierfür wird der gewünschte Alias als Zeichenkette übergeben.
