--- a/Kapitel/00_Backend/Resolvers/MutationResolver/AliasSuggestionMutation/disapproveAliasSuggestion_String_int_boolean/main.tex
+++ b/Kapitel/00_Backend/Resolvers/MutationResolver/AliasSuggestionMutation/disapproveAliasSuggestion_String_int_boolean/main.tex
@@ -3,6 +3,7 @@
 Lehnt den gewünschten Alias-Vorschlag ab.
 \paragraph*{Beschreibung}
 Die Methode ist ausschließlich von Administratoren aufzurufen.
+Gibt die Anweisung an die Schnittstelle \texttt{AliasSuggestionService}, einen Alias-Vorschlag abzulehnen.
 Die Methode ermöglicht, dass ein Administrator einen Alias-Vorschlag durch Angeben der entsprechenden Zeichenkette als auch der ID des dazugehörigen Kartenobjekts ablehnen kann.
 \paragraph*{Parameter}
 \begin{itemize}
