--- a/Kapitel/00_Backend/Resolvers/MutationResolver/AliasSuggestionMutation/evaluateAliasSuggestion_String,int,String,boolean_boolean/main.tex
+++ b/Kapitel/00_Backend/Resolvers/MutationResolver/AliasSuggestionMutation/evaluateAliasSuggestion_String,int,String,boolean_boolean/main.tex
@@ -1,9 +1,10 @@
-\paragraph{\texttt{evaluateAliasSuggestion(aliasSuggestion : String, mapID : int, userID : UserID, evaluation : boolean) : boolean}}%$$$M
+\paragraph{\texttt{evaluateAliasSuggestion(aliasSuggestion : String, mapID : int, user : String, evaluation : boolean) : boolean}}%$$$M
 \paragraph*{Kurzbeschreibung}
 Bewertet den gewünschten Alias-Vorschlag.
 \paragraph*{Beschreibung}
+Gibt die Anweisung an die Schnittstelle \texttt{AliasSuggestionService}, einen Alias-Vorschlag wie gewünscht zu bewerten.
 Die Methode ermöglicht, dass ein Benutzer einen Alias-Vorschlag bewerten kann. 
-Hierfür wird der gewünschte Alias-Vorschlag als auch die ID des dazugehörigen Kartenobjekts und die ID des bewertenden Benutzers übergeben.
+Hierfür wird der gewünschte Alias-Vorschlag als auch die ID des dazugehörigen Kartenobjekts und das Pseudonym des bewertenden Benutzers übergeben.
 Außerdem wird Bewertung übergeben.
 \paragraph*{Parameter}
 \begin{itemize}
@@ -13,9 +14,9 @@ Außerdem wird Bewertung übergeben.
 	\item mapID : int
 		\paragraph*{Beschreibung}
 		Die ID des Kartenobjekts, für das der Alias-Vorschlag als Bezeichner dienen soll.
-	\item userID : UserID
+	\item user : String
 		\paragraph*{Beschreibung}
-		Die ID des vorschlagenden Benutzers.
+		Das Pseudonym des vorschlagenden Benutzers.
 	\item evaluation : boolean
 		\paragraph*{Beschreibung}
 		Die Bewertung des bewertenden Benutzers für den gewünschten Alias-Vorschlag.
