--- a/Kapitel/00_Backend/Resolvers/MutationResolver/AliasSuggestionMutation/main.tex
+++ b/Kapitel/00_Backend/Resolvers/MutationResolver/AliasSuggestionMutation/main.tex
@@ -2,6 +2,6 @@
 
 \inprelmod{approveAliasSuggestion_String_int_boolean}
 \inprelmod{disapproveAliasSuggestion_String_int_boolean}
-\inprelmod{evaluateAliasSuggestion_String,int,UserID,boolean_boolean}
-\inprelmod{suggestAlias_String,int,UserID_boolean}
+\inprelmod{evaluateAliasSuggestion_String,int,String,boolean_boolean}
+\inprelmod{suggestAlias_String,int,String_boolean}
 \inprelmod{removeAliasSuggestion_String,int_boolean}
