--- a/Kapitel/00_Backend/Resolvers/MutationResolver/AliasMutation/blacklistAlias_String_boolean/main.tex
+++ b/Kapitel/00_Backend/Resolvers/MutationResolver/AliasMutation/blacklistAlias_String_boolean/main.tex
@@ -3,6 +3,7 @@
 Setzt eine bestimmte Zeichenkette auf die Blacklist.
 \paragraph*{Beschreibung}
 Die Methode ist ausschließlich von Administratoren aufzurufen.
+Gibt die Anweisung an die Schnittstelle \texttt{BlacklistService}, eine Zeichenkette auf die Blacklist zu setzen.
 Die Methode ermöglicht, dass ein Administrator eine bestimmte Zeichenkette auf die Blacklist setzen kann.
 Dies hat zur Folge, dass ein Aliasvorschlag, der genau aus dieser Zeichenkette zusammengesetzt ist, nicht hinzugefügt werden kann.
 Hierfür wird die Zeichenkette übergeben.
