--- a/Kapitel/00_Backend/Resolvers/MutationResolver/AliasSuggestionMutation/approveAliasSuggestion_String_int_boolean/main.tex
+++ b/Kapitel/00_Backend/Resolvers/MutationResolver/AliasSuggestionMutation/approveAliasSuggestion_String_int_boolean/main.tex
@@ -3,6 +3,7 @@
 Akzeptiert den gewünschten Alias-Vorschlag.
 \paragraph*{Beschreibung}
 Die Methode ist ausschließlich von Administratoren aufzurufen.
+Gibt die Anweisung an die Schnittstelle \texttt{AliasSuggestionService}, einen Alias-Vorschlag anzunehmen.
 Die Methode ermöglicht, dass ein Administrator einen Alias-Vorschlag durch Angeben der entsprechenden Zeichenkette und die ID des dazugehörigen Kartenobjekts akzeptieren kann.
 Dies hat zur Folge, dass der angenommene Alias-Vorschlag in die Alias-Datenbank aufgenommen wird.
 \paragraph*{Parameter}
