--- a/Kapitel/00_Backend/Resolvers/MutationResolver/AliasSuggestionMutation/blacklistAliasSuggestion_String_boolean/main.tex
+++ b/Kapitel/00_Backend/Resolvers/MutationResolver/AliasSuggestionMutation/blacklistAliasSuggestion_String_boolean/main.tex
@@ -3,6 +3,7 @@
 Setzt den gewünschten Alias-Vorschlag auf die Blacklist.
 \paragraph*{Beschreibung}
 Die Methode ist ausschließlich von Administratoren aufzurufen.
+Gibt die Anweisung an die Schnittstelle \texttt{AliasSuggestionService}, einen Alias-Vorschlag auf die Blacklist zu setzen.
 Die Methode ermöglicht, dass ein Administrator einen Alias-Vorschlag durch Angeben der entsprechenden Zeichenkette auf die Blacklist setzen und damit ablehnen kann.
 \paragraph*{Parameter}
 \begin{itemize}
