--- a/Kapitel/00_Backend/Resolvers/MutationResolver/AliasSuggestionMutation/removeAliasSuggestion_String,int_boolean/main.tex
+++ b/Kapitel/00_Backend/Resolvers/MutationResolver/AliasSuggestionMutation/removeAliasSuggestion_String,int_boolean/main.tex
@@ -3,6 +3,7 @@
 Entfernt den gewünschten Alias-Vorschlag.
 \paragraph*{Beschreibung}
 Die Methode ist ausschließlich von Administratoren aufzurufen.
+Gibt die Anweisung an die Schnittstelle \texttt{AliasSuggestionService}, einen Alias-Vorschlag aus der Datenbank der Alias-Vorschläge zu entfernen.
 Die Methode ermöglicht, dass ein Administrator einen Alias-Vorschlag durch Angeben der entsprechenden Zeichenkette als auch der ID des dazugehörigen Kartenobjekts entfernen kann.
 Dies hat zur Folge, dass der Alias-Vorschlag aus der Datenbank aller Alias-Vorschlägen gelöscht wird.
 \paragraph*{Parameter}
