--- a/Kapitel/00_Backend/Resolvers/MutationResolver/AliasSuggestionMutation/suggestAlias_String,int,String_boolean/main.tex
+++ b/Kapitel/00_Backend/Resolvers/MutationResolver/AliasSuggestionMutation/suggestAlias_String,int,String_boolean/main.tex
@@ -1,9 +1,10 @@
-\paragraph{\texttt{suggestAlias(aliasSuggestion : String, mapID : int, userID : UserID) : boolean}}%$$$M
+\paragraph{\texttt{suggestAlias(aliasSuggestion : String, mapID : int, user : String) : boolean}}%$$$M
 \paragraph*{Kurzbeschreibung}
 Schlägt den gewünschten Alias vor.
 \paragraph*{Beschreibung}
+Gibt die Anweisung an die Schnittstelle \texttt{AliasSuggestionService}, einen Alias-Vorschlag zur Datenbank aller Alias-Vorschläge hinzuzufügen.
 Die Methode ermöglicht, dass ein Benutzer einen Alias vorschlagen kann. 
-Hierfür wird die entsprechende Zeichenkette des Alias-Vorschlags und die ID des dazugehörigen Kartenobjekts als auch die ID des vorschlagenden Benutzers übergeben.
+Hierfür wird die entsprechende Zeichenkette des Alias-Vorschlags und die ID des dazugehörigen Kartenobjekts als auch das Pseudonym des vorschlagenden Benutzers übergeben.
 \paragraph*{Parameter}
 \begin{itemize}
 	\item aliasSuggestion : String
@@ -12,9 +13,9 @@ Hierfür wird die entsprechende Zeichenkette des Alias-Vorschlags und die ID des
 	\item mapID : int
 		\paragraph*{Beschreibung}
 		Die ID des Kartenobjekts, für das der Alias als Bezeichner vorgeschlagen wird.
-	\item userID : UserID
+	\item user : String
 		\paragraph*{Beschreibung}
-		Die ID des vorschlagenden Benutzers.
+		Das Pseudonym des vorschlagenden Benutzers.
 \end{itemize}
 \paragraph*{Rückgabewert}
 Wahr, wenn der gewünschte Alias erfolgreich vorgeschlagen werden konnte, ansonsten falsch.
