--- a/Kapitel/02_App/01_View/Karte/TileMarkerOverlay/main.tex
+++ b/Kapitel/02_App/01_View/Karte/TileMarkerOverlay/main.tex
@@ -52,7 +52,7 @@ Teilt dem MapLayerDataController mit, dass ein bestimmtes Kartenobjekt ausgewäh
 \paragraph*{Rückgabewert}
 Void.
 
-\subsubsection{\texttt{# createMarker(data : DisplayData, mapView : MapView) : MapObjectMarker $\lbrace$abstract$\rbrace$}}%$$$M
+\subsubsection{\texttt{\# createMarker(data : DisplayData, mapView : MapView) : MapObjectMarker $\lbrace$abstract$\rbrace$}}%$$$M
 \paragraph*{Beschreibung}
 Dies ist eine Fabrikmethode zur Erzeugung eines MapObjectMarker.
 \paragraph*{Parameter}
@@ -81,7 +81,7 @@ Erbt von TileMarkerOverlay.
 \paragraph*{Beschreibung}
 Diese Klasse ist ein TileMarkerOverlay für die Gebäudeebene auf der Karte.
 
-\subsubsection{\texttt{# createMarker(data : DisplayData) : MapObjectMarker}}%$$$M
+\subsubsection{\texttt{\# createMarker(data : DisplayData) : MapObjectMarker}}%$$$M
 \paragraph*{Kurzbeschreibung}
 Erzeugt einen BuildingMarker mit den gegeben Daten.
 \paragraph*{Beschreibung}
@@ -104,7 +104,7 @@ Erbt von TileMarkerOverlay.
 \paragraph*{Beschreibung}
 Diese Klasse ist ein TileMarkerOverlay für die Etagenebene auf der Karte.
 
-\subsubsection{\texttt{# createMarker(data : DisplayData) : MapObjectMarker}}%$$$M
+\subsubsection{\texttt{\# createMarker(data : DisplayData) : MapObjectMarker}}%$$$M
 \paragraph*{Kurzbeschreibung}
 Erzeugt einen RoomMarker mit den gegeben Daten.
 \paragraph*{Beschreibung}
