--- a/Kapitel/00_Backend/Resolver/MutationResolver/AliasMutation/main.tex
+++ b/Kapitel/00_Backend/Resolver/MutationResolver/AliasMutation/main.tex
@@ -1,4 +1,5 @@
 \subsection{AliasMutation}
 
+\inprelmod{Beschreibung}
 \inprelmod{removeAlias_String,int_boolean}
 \inprelmod{blacklistAlias_String_boolean}
