--- a/Kapitel/00_Backend/Resolver/MutationResolver/AliasSuggestionMutation/main.tex
+++ b/Kapitel/00_Backend/Resolver/MutationResolver/AliasSuggestionMutation/main.tex
@@ -1,5 +1,6 @@
 \subsection{AliasSuggestionMutation}
 
+\inprelmod{Beschreibung_AliasSuggestionMutation}
 \inprelmod{approveAliasSuggestion_String_int_boolean}
 \inprelmod{approveAliasSuggestion_String_int_boolean}
 \inprelmod{disapproveAliasSuggestion_String_int_boolean}
