--- a/Kapitel/00_Backend/Resolver/MutationResolver/main.tex
+++ b/Kapitel/00_Backend/Resolver/MutationResolver/main.tex
@@ -1,4 +1,5 @@
 \section{MutationResolver}
 
+\inprelmod{Beschreibung_MutationResolver}
 \inprelmod{AliasMutation}
 \inprelmod{AliasSuggestionMutation}
