Added class diagramm for App/View/Map

--- a/Kapitel/02_App/01_View/Karte/main.tex
+++ b/Kapitel/02_App/01_View/Karte/main.tex
@@ -2,4 +2,8 @@
 
 \inprelmod{Library}
 \inprelmod{DisplayData}
+\inprelmod{MapScreen}
+\inprelmod{LevelChangeDisplay}
+\inprelmod{TileMarkerOverlay}
 \inprelmod{Marker}
+\inprelmod{Klassendiagramm}
