--- a/Kapitel/00_Backend/Resolver/MutationResolver/AliasMutation/Beschreibung_AliasMutation/main.tex
+++ b/Kapitel/00_Backend/Resolver/MutationResolver/AliasMutation/Beschreibung_AliasMutation/main.tex
@@ -1,6 +1,6 @@
-\subsection{Klassenbeschreibung : AliasSuggestionMutation}%$$$M
+\subsection{Klassenbeschreibung : AliasMutation}%$$$M
 \paragraph*{Kurzbeschreibung}
-Nimmt Http-Requests entgegen, welche in erster Linie Aliasvorschläge manipulieren wollen.
+Nimmt Http-Requests entgegen, welche in erster Linie Aliaseinträge manipulieren wollen.
 \paragraph*{Enthaltene Methoden}
 \begin{itemize}
     \item blacklistAlias(wordToForbid : String) : Boolean
