--- a/Kapitel/00_Backend/Resolver/QueryResolver/AliasSuggestionQuery/main.tex
+++ b/Kapitel/00_Backend/Resolver/QueryResolver/AliasSuggestionQuery/main.tex
@@ -1,3 +1,4 @@
 \subsection{AliasSuggestionQuery}
 
+\inprelmod{Beschreibung_AliasSuggestionQuery}
 \inprelmod{getAliasSuggestions_int,int_ListAliasSuggestion}
