--- a/Kapitel/00_Backend/Resolver/MutationResolver/Beschreibung_MutationResolver/main.tex
+++ b/Kapitel/00_Backend/Resolver/MutationResolver/Beschreibung_MutationResolver/main.tex
@@ -1,4 +1,4 @@
-\subsection{\texttt{Paketbeschreibung : MutationResolver}%$$$M
+\subsection{Paketbeschreibung : MutationResolver}%$$$M
 \paragraph*{Kurzbeschreibung}
 Nimmt Http-Requests entgegen, welche die gespeicherten Daten manipulieren wollen.
 \paragraph*{Enthaltene Klassen}
