--- a/Kapitel/00_Backend/Resolver/QueryResolver/MapIDQuery/Beschreibung_MapIDQuery/main.tex
+++ b/Kapitel/00_Backend/Resolver/QueryResolver/MapIDQuery/Beschreibung_MapIDQuery/main.tex
@@ -1,6 +1,11 @@
-\subsection{\texttt{Klassenbeschreibung : AliasMutation}%$$$M
+\subsection{Klassenbeschreibung : AliasSuggestionMutation}%$$$M
 \paragraph*{Kurzbeschreibung}
-Nimmt Http-Requests entgegen, welche in erster Linie Aliaseinträge manipulieren wollen.
+Nimmt Http-Requests entgegen, welche in erster Linie Aliasvorschläge manipulieren wollen.
+\paragraph*{Beschreibung}
+Die Methode ist ausschließlich von Administratoren aufzurufen.
+Die Methode ermöglicht, dass ein Administrator einen globalen Alias aus der Datenbank aus allen globalen Aliassen entfernen kann.
+Dies hat zur Folge, dass das entsprechende Kartenobjekt nicht mehr durch diesen, nun gelöschten Alias, gefunden werden kann.
+Hierfür wird der gewünschte globale Alias als Zeichenkette als auch die ID des dazugehörigen Kartenobjekts übergeben.
 \paragraph*{Enthaltene Methoden}
 \begin{itemize}
     \item blacklistAlias(wordToForbid : String) : Boolean
