--- a/Kapitel/00_Backend/Resolver/Beschreibung_Resolver/main.tex
+++ b/Kapitel/00_Backend/Resolver/Beschreibung_Resolver/main.tex
@@ -1,4 +1,4 @@
-\subsection{\texttt{Paketbeschreibung : MutationResolver}%$$$M
+\subsection{Paketbeschreibung : Resolver}%$$$M
 \paragraph*{Kurzbeschreibung}
 Beinhaltet die Schnittstellen, die von außen durch Http-Requests über die GraphQL-Schnittstelle aufgerufen werden können.
 \paragraph*{Beschreibung}
