--- a/Kapitel/00_Backend/Resolver/QueryResolver/AliasQuery/main.tex
+++ b/Kapitel/00_Backend/Resolver/QueryResolver/AliasQuery/main.tex
@@ -1,5 +1,5 @@
 \subsection{AliasQuery}
 
-\inprelmod{AliasQuery}
+\inprelmod{Beschreibung_AliasQuery}
 \inprelmod{getAlias_int_ListAlias}
 \inprelmod{getAlias_int,UserID_ListAlias}
