Added methods to MapDisplayDataProvider

--- a/Kapitel/02_App/02_ViewModel/Karte/Interfaces/MapDisplayDataProvider/main.tex
+++ b/Kapitel/02_App/02_ViewModel/Karte/Interfaces/MapDisplayDataProvider/main.tex
@@ -47,3 +47,27 @@ Darf null sein, wenn keine bestimmte Position fokussiert werden muss.
 Keine.
 \paragraph*{Rückgabewert}
 LiveData<IGeoPoint>, Position, die mittig angezeigt werden soll.
+
+\subsubsection{\texttt{+ getBuildingController() : MapLayerDataController}}%$$$M
+\paragraph*{Beschreibung}
+Gibt den MapLayerDataController für die Gebäude-Ebene der Karte zurück.
+\paragraph*{Parameter}
+Keine.
+\paragraph*{Rückgabewert}
+MapLayerDataController für die Gebäude-Ebene der Karte.
+
+\subsubsection{\texttt{+ getLevelController() : MapLayerDataController}}%$$$M
+\paragraph*{Beschreibung}
+Gibt den MapLayerDataController für die Etagen-Ebene auf der Karte zurück.
+\paragraph*{Parameter}
+Keine.
+\paragraph*{Rückgabewert}
+MapLayerDataController für die Etagen-Ebene auf der Karte.
+
+\subsubsection{\texttt{+ getLevelChangeController() : LevelChangeController}}%$$$M
+\paragraph*{Beschreibung}
+Gibt den LevelChangeControllers für den Etagenwechsel zurück.
+\paragraph*{Parameter}
+Keine.
+\paragraph*{Rückgabewert}
+LevelChangeControllers für den Etagenwechsel.
