--- a/Kapitel/02_App/02_ViewModel/SearchController/main.tex
+++ b/Kapitel/02_App/02_ViewModel/SearchController/main.tex
@@ -5,6 +5,25 @@ und ermöglicht die Bestimmung des Kartenobjekts zu einem gültigen Suchbegriff,
 dies kann eine Gebäudenummer, Gebäudenummer und Raumnummer, Gebäudenummer und Alias eines Raumes, ein Alias eines Gebäudes oder eine Person sein.
 Dies macht sie, indem sie die Daten bei SearchModel anfordert.
 
+\subsubsection{\texttt{+ getSearchInput() : String}}%$$$M
+\paragraph*{Kurzbeschreibung}
+Diese Methode ermöglicht Benutzereingaben und gibt einen gültigen Suchbegriff oder Null zurück.
+\paragraph*{Beschreibung}
+Diese Methode ermöglicht die Suche von Gebäuden und Räumen über die Eingabe eines Suchbegriffs in ein Textfeld.
+Zeigt eine Liste von Vorschlägen (die Suchbegriffe), falls vorhanden, und erlaubt dem Benutzer, einen Vorschlag auszuwählen oder die Eingabe vollständig selbst vorzunehmen.
+\paragraph*{Parameter}
+\begin{itemize}
+    \item keine
+\end{itemize}
+\paragraph*{Rückgabewert}
+String, Suchbegriff, den der Benutzer eingegeben hat
+\paragraph*{Notizen zur Implementierung}
+Benutzt eine Instanz von SearchView (\href{https://developer.android.com/guide/topics/search/search-dialog#SearchableActivity}).
+Für das Durchsuchen der Daten wird getSuggestions von Search genutzt.
+Die Suchvorschläge werden einem Cursor übergeben.
+Dieser wird von einem CursorAdapter adaptiert und die Vorschläge werden so an die Instanz von SearchView gegeben.
+Dort werden die Vorschläge dann dem Benutzer angezeigt.
+
 \subsubsection{\texttt{+ getSuggestions(query : Query) : List<String>}}%$$$M
 \paragraph*{Kurzbeschreibung}
 Diese Methode gibt Suchvorschläge zu der übergebenen Query zurück.
@@ -15,7 +34,7 @@ Diese Methode fordert Suchvorschläge zu der übergebenen Query von dem SearchMo
     \item query : Query Der Suchbegriff den der Benutzer eingegeben hat
 \end{itemize}
 \paragraph*{Rückgabewert}
-List<String>, Suchvorschläge zur Query, die SearchModel zurückgegeben hat
+LiveData<List<String>>, Suchvorschläge zur Query, die SearchModel zurückgegeben hat
 
 \subsubsection{\texttt{+ getSearchable(searchKey : String) : MapObject}}%$$$M
 \paragraph*{Kurzbeschreibung}
@@ -28,27 +47,3 @@ Diese Methode fordert das zu den Suchbegriffen gehörenden Kartenobjekt von dem 
 \end{itemize}
 \paragraph*{Rückgabewert}
 MapObject, Kartenobjekt zum Suchbegriff, die SearchModel zurückgegeben hat
-
-\subsubsection{\texttt{+ storeSearchKey(searchKey : String)}}%$$$M
-\paragraph*{Kurzbeschreibung}
-Diese Methode lässt den gegebenen Suchbegriff speichern.
-\paragraph*{Beschreibung}
-Diese Methode lässt den gegebenen Suchbegriff in der Datenbank speichern.
-\paragraph*{Parameter}
-\begin{itemize}
-    \item searchKey : String
-\end{itemize}
-\paragraph*{Rückgabewert}
-keinen
-
-\subsubsection{\texttt{+ getLastSearchKeys() : List<String>}}%$$$M
-\paragraph*{Kurzbeschreibung}
-Diese Methode gibt die zuletzt gesuchten Suchbegriffe zurück.
-\paragraph*{Beschreibung}
-Diese Methode fordert die zuletzt gesuchten Suchbegriffe von dem SearchModel an und gibt diese zurück.
-\paragraph*{Parameter}
-\begin{itemize}
-    \item keine
-\end{itemize}
-\paragraph*{Rückgabewert}
-List<String>, zuletzt gesuchte Suchbegriffe, die SearchModel zurückgegeben hat
