--- a/Kapitel/02_App/03_Model/SearchModel/main.tex
+++ b/Kapitel/02_App/03_Model/SearchModel/main.tex
@@ -1,8 +1,8 @@
 \subsection{SearchModel}
 \paragraph*{Beschreibung}
-Diese Klasse ermöglicht das Durchsuchen der Datenbank nach gültigen Suchbegriffen zu der gegebenen Query 
-und ermöglicht die Bestimmung des Kartenobjekts zu einem gültigen Suchbegriff, 
-dies kann eine Gebäudenummer, Gebäudenummer und Raumnummer, Gebäudenummer und Alias eines Raumes, ein Alias eines Gebäudes oder eine Person sein.
+Diese Klasse ermöglicht das Durchsuchen der Datenbank nach gültigen Suchbegriffen zu der gegebenen Query.
+Sie ermöglicht die Bestimmung des Kartenobjekts zu einem gültigen Suchbegriff, 
+dieser kann eine Gebäudenummer, Gebäudenummer und Raumnummer, Gebäudenummer und Alias eines Raumes, ein Alias eines Gebäudes oder eine Person sein.
 
 \subsubsection{\texttt{+ getSuggestions(query : Query) : List<String>}}%$$$M
 \paragraph*{Kurzbeschreibung}
