--- a/Kapitel/00_Backend/Services/AliasService/main.tex
+++ b/Kapitel/00_Backend/Services/AliasService/main.tex
@@ -1,5 +1,6 @@
 \subsection{AliasService}
 
+\inprelmod{Beschreibung_AliasService}
 \inprelmod{addAlias_String,int_boolean}
 \inprelmod{removeAlias_String,int_boolean}
 \inprelmod{getAlias_int,UserID_ListAlias}
