--- a/Kapitel/00_Backend/Services/main.tex
+++ b/Kapitel/00_Backend/Services/main.tex
@@ -1,5 +1,6 @@
 \section{Services}
 
+\inprelmod{Beschreibung_Service}
 \inprelmod{AliasService}
 \inprelmod{AliasServiceImp}
 \inprelmod{UserService}
