--- a/Kapitel/00_Backend/Services/UserService/main.tex
+++ b/Kapitel/00_Backend/Services/UserService/main.tex
@@ -1,4 +1,5 @@
 \subsection{UserService}
 
+\inprelmod{Beschreibung_UserService}
 \inprelmod{addUser_String_UserID}
 \inprelmod{loadUserByToken_String_User}
