Added App/ViewModel classes

--- a/Kapitel/02_App/02_ViewModel/Karte/Interfaces/MapLayerDataController/main.tex
+++ b/Kapitel/02_App/02_ViewModel/Karte/Interfaces/MapLayerDataController/main.tex
@@ -14,7 +14,7 @@ Diese Methode fokussiert das richtige Element, nachdem ein Kartenobjekt ausgewä
 \paragraph*{Beschreibung}
 Diese Methode wird aufgerufen, wenn ein Kartenobjekt vom Benutzer ausgewählt wird, dessen 
 Daten von diesem MapLayerDataController verwaltet werden.\\
-Deise Methode kümmert sich um die Fokussierung des richtigen Kartenobjekts. Eventuell muss 
+Diese Methode kümmert sich um die Fokussierung des richtigen Kartenobjekts. Eventuell muss 
 aus oder in die Etagenansicht gewechselt werden.
 \paragraph*{Parameter}
 \begin{itemize}
@@ -51,7 +51,7 @@ Keine.
 \paragraph*{Rückgabewert}
 LiveData<int> MapId des fokussierten Kartenobjekts.
 
-\subsubsection{\texttt{+ isFloorFocus() : LiveData<boolean>}}%$$$M
+\subsubsection{\texttt{+ isLevelMode() : LiveData<boolean>}}%$$$M
 \paragraph*{Kurzbeschreibung}
 Gibt zurück, ob das fokussierte Kartenobjekt auf einer Etage ist.
 \paragraph*{Beschreibung}
