--- a/Kapitel/02_App/03_Model/MapDataProvider/main.tex
+++ b/Kapitel/02_App/03_Model/MapDataProvider/main.tex
@@ -22,7 +22,8 @@ LiveData<List<DisplayData>>, DisplayData für Räume einer Etage.
 {ITileSource}}}%$$$M
 \paragraph*{Beschreibung}
 Gibt eine \href{https://osmdroid.github.io/osmdroid/javadocAll/org/osmdroid/tileprovider/tilesource/ITileSource.html}
-{ITileSource} mit den Kartendaten für das Stockwerk eines Gebäudes zurück.
+{ITileSource} mit den Kartendaten für das Stockwerk eines Gebäudes zurück.\\
+Existiert die angeforderte Etagenkarte nicht auf dem Gerät, wird null zurückgegeben.
 \paragraph*{Parameter}
 \begin{itemize}
     \item mapId : int MapId des Gebäudes.
@@ -30,7 +31,7 @@ Gibt eine \href{https://osmdroid.github.io/osmdroid/javadocAll/org/osmdroid/tile
 \end{itemize}
 \paragraph*{Rückgabewert}
 \href{https://osmdroid.github.io/osmdroid/javadocAll/org/osmdroid/tileprovider/tilesource/ITileSource.html}
-{ITileSource} mit den Kartendaten für die Etage.
+{ITileSource} mit den Kartendaten für die Etage oder null.
 
 \subsubsection{\texttt{+ getBuildingDisplayData() : LiveData<List<DisplayData>>}}%$$$M
 \paragraph*{Beschreibung}
