--- a/Kapitel/02_App/03_Model/SearchModel/main.tex
+++ b/Kapitel/02_App/03_Model/SearchModel/main.tex
@@ -1,57 +1,67 @@
-\subsection{SearchModel}
+\subsection{Interface ISearchModel}
 \paragraph*{Beschreibung}
-Diese Klasse ermöglicht das Durchsuchen der Datenbank nach gültigen Suchbegriffen zu der gegebenen Query.
+Dieses Interface ermöglicht das Durchsuchen der Datenbank nach gültigen Suchbegriffen zu der gegebenen Query.
 Sie ermöglicht die Bestimmung des Kartenobjekts zu einem gültigen Suchbegriff, 
 dieser kann eine Gebäudenummer, Gebäudenummer und Raumnummer, Gebäudenummer und Alias eines Raumes, ein Alias eines Gebäudes oder eine Person sein.
 
-\subsubsection{\texttt{+ getSuggestions(query : Query) : List<String>}}%$$$M
+\subsubsection{\texttt{+ getSuggestions(input : String, amount : int) : List<String>}}%$$$M
 \paragraph*{Kurzbeschreibung}
-Diese Methode gibt Suchvorschläge zu der übergebenen Query zurück.
+Diese Methode gibt Suchvorschläge zu dem übergebenen String zurück.
 \paragraph*{Beschreibung}
-Diese Methode gibt Suchvorschläge zu der übergebenen Query aus einer (SQL-)Datenbank, 
+Diese Methode gibt Suchvorschläge zu dem übergebenen String aus einer (SQL-)Datenbank, 
 die alle Kartenobjekte inklusive ihrer offiziellen Namen, Aliasse und Personen enthält, zurück.
-Wenn möglich sollen auch Rechtschreibfehler einkalkuliert werden, so dass auch Vorschläge für falsch geschriebene Suchbegriffe kommen.
+Es werden die Suchvorschläge nach der Übereinstimmung mit der Eingabe sortiert zurück gegeben.
+Die Suchvorschläge mit der höchsten Übereinstimmung sind die ersten Elemente der Liste.
+Die Liste enthält genau so viele Vorschläge, wie die Anzahl vorgibt. Die Anzahl ist nicht negativ.
+Somit werden auch Vorschläge für falsch geschriebene Suchbegriffe angezeigt.
 \paragraph*{Parameter}
 \begin{itemize}
-    \item query : Query Der Suchbegriff den der Benutzer eingegeben hat
+    \item input : String = Der Suchbegriff den der Benutzer eingegeben hat
+    \item amout : int = Die maximale Anzahl der Elemente der Liste an Suchvorschlägen
 \end{itemize}
 \paragraph*{Rückgabewert}
 List<String>, Suchvorschläge, die die Datenbank zurückgegeben hat
 \paragraph*{Notizen zur Implementierung}
 Wenn SQL genutzt wird, wird die Suche direkt auf SQL ausgeführt z.B. mit \dq like\dq{}.
 
-\subsubsection{\texttt{+ getSearchable(searchKey : String) : MapObject}}%$$$M
+\subsubsection{\texttt{+ getLastSearches(amount : int) : List<String>}}%$$$M
 \paragraph*{Kurzbeschreibung}
-Diese Methode gibt das zum Suchbegriff gehörenden Kartenobjekt zurück.
+Diese Methode gibt eine Liste der zuletzt gesuchten Suchbegriffe zurück.
 \paragraph*{Beschreibung}
-Diese Klasse ermittelt das zu den Suchbegriffen gehörenden Kartenobjekt in der Datenbank und gibt dieses zurück.
+Diese Methode gibt eine Liste der zuletzt gesuchten Suchbegriffe aus der Datenbank zurück.
+Die Anzahl der Elemente ist die übergebene Anzahl, es sei den es gibt nicht genug bereits gesuchte Suchbegriffe.
+Die Suchbegriffe werden nach der letzten Benutzung sortiert. 
+Der zuletzt genutzte Suchbegriff ist das erste Element der Liste.
 \paragraph*{Parameter}
 \begin{itemize}
-    \item searchKey : String Suchbegriff
+    \item amout : int = Die maximale Anzahl der Elemente der Liste an letzten Suchbegriffen
 \end{itemize}
 \paragraph*{Rückgabewert}
-MapObject, Kartenobjekt zum Suchbegriff
+List<String>, zuletzt gesuchte Suchbegriffe
 
 \subsubsection{\texttt{+ storeSearchKey(searchKey : String)}}%$$$M
 \paragraph*{Kurzbeschreibung}
 Diese Methode speichert den gegebenen Suchbegriff.
 \paragraph*{Beschreibung}
 Diese Methode speichert den gegebenen Suchbegriff in der Datenbank als zuletzt gesucht.
+Wenn der Suchbegriff bereits in der Liste der zuletzt gesuchten Suchbegriffe ist, 
+wird der Suchbegriff zuerst aus der Liste entfernt und dann als neuster zuletzt gesuchter Suchbegriff hinzugefügt.
+Somit sind die bereits gesuchten Suchbegriffe immer danach sortiert, wann sie zuletzt gesucht wurden.
 \paragraph*{Parameter}
 \begin{itemize}
-    \item searchKey : String
+    \item searchKey : String = Suchbegriff, der gespeichert werden soll
 \end{itemize}
 \paragraph*{Rückgabewert}
 keinen
 
-\subsubsection{\texttt{+ getLastSearchKeys() : List<String>}}%$$$M
+\subsubsection{\texttt{+ getMapIdBySearchKey(searchKey : String) : int}}%$$$M
 \paragraph*{Kurzbeschreibung}
-Diese Methode gibt die zuletzt gesuchten Suchbegriffe zurück.
+Diese Methode gibt die MapId des zum Suchbegriff gehörenden Kartenobjekts zurück.
 \paragraph*{Beschreibung}
-Diese Methode gibt die zuletzt gesuchten Suchbegriffe aus der Datenbank und gibt diese zurück.
+Diese Klasse ermittelt das zu den Suchbegriffen gehörenden Kartenobjekt in der Datenbank und gibt die MapId dieses zurück.
 \paragraph*{Parameter}
 \begin{itemize}
-    \item keine
+    \item searchKey : String = Suchbegriff, dessen MapId bestimmt werden soll
 \end{itemize}
 \paragraph*{Rückgabewert}
-List<String>, zuletzt gesuchte Suchbegriffe
+int, MapId zum Suchbegriff
